Replace new Long() with Long.valueOf()
Signed-off-by: Tobi Schäfer <interface@p3k.org>